# fraction-class-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp  fraction.cpp  fraction.h  fraction.hpp
demo-polynomial/: CMakeLists.txt  demo.cpp  main.cpp  monomial.cpp  monomial.h  polynomial.cpp  polynomial.h  readme.md
demo-polynomial/legarcy/: mono+poly.h  poly1.cpp
fraction-calculator/: CMakeLists.txt  README.md  main.cpp
